--- a/Agence/templates/header.html
+++ b/Agence/templates/header.html
@@ -73,6 +73,9 @@
         content: " *";
         color: red;
       }
+      .btn-primary {
+        background-color: #007bff;
+      }
       
       
     </style>
