--- a/Agence/templates/login_com.html
+++ b/Agence/templates/login_com.html
@@ -29,7 +29,8 @@ Log In
   </div>
   
 
-  <button class="btn btn-primary" type="submit" style="margin-bottom: 10px;">Log in</button>
+  <button class="btn btn-primary" type="button" style="margin-bottom: 10px;">Log in</button>
+ 
   <p> Don't have an account ? <a href="{% url 'sign_com' %}">Register</a></p>
 </form>
 {% endblock content%}
