--- a/Agence/templates/base.html
+++ b/Agence/templates/base.html
@@ -37,7 +37,7 @@
           <!-- Brand Logo -->
           <a href="{% url 'index' %}" class="brand-link">
             <img src="{% static 'dist/img/logor.png'%}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-            <span class="brand-text font-weight-light">RecuitMe</span>
+            <span class="brand-text font-weight-light">RecruitMe</span>
           </a>
       
 
@@ -81,7 +81,7 @@
         </div>
         <!-- /.content-wrapper -->
         <footer class="main-footer">
-          <strong>Copyright &copy; 2023-2023 <a href="#">RecuitMe</a>.</strong>
+          <strong>Copyright &copy; 2023-2023 <a href="#">RecruitMe</a>.</strong>
           All rights reserved.
           <div class="float-right d-none d-sm-inline-block">
             <b>Version</b> 1.0.0
