--- a/Agence/templates/login_can.html
+++ b/Agence/templates/login_can.html
@@ -4,7 +4,8 @@
 Log In  
 {% endblock title %}
 {% block content%}
-<form class="needs-validation" novalidate>
+<form  class="needs-validation" novalidate>
+
   <div class="form-row">
     <div class="col-md-3 mb-3">
       <label for="validationCustomUsername" class="required">Email</label>
@@ -29,7 +30,7 @@ Log In
   </div>
   
 
-  <button class="btn btn-primary" type="submit" style="margin-bottom: 10px;">Log in</button>
+  <a href="{% url 'home_can' %}"><button class="btn btn-primary" type="button" style="margin-bottom: 10px;">Log in</button></a>
   <p> Don't have an account ? <a href="{% url 'sign_can' %}">Register</a></p>
 </form>
 {% endblock content%}
