--- a/Agence/templates/signup_can.html
+++ b/Agence/templates/signup_can.html
@@ -5,24 +5,26 @@ Sign Up
   
 {% endblock title %}
 {% block content%}
-<form class="needs-validation" novalidate>
+<form action="{% url 'save_signup_can'%}" method="POST" class="needs-validation" novalidate>
+  {% csrf_token %}
   <div class="form-row">
     <div class="col-md-3 mb-3">
       <label for="validationCustom01" class="required">First name</label>
-      <input type="text" class="form-control" id="validationCustom01" placeholder="First name"  required><div class="invalid-feedback">
+      <input type="text" name="first_name" class="form-control" maxlength="50" id="validationCustom01" placeholder="First name"  required>
+      <div class="invalid-feedback">
         Please provide your first name.
       </div>
     </div>
     <div class="col-md-3 mb-3">
       <label for="validationCustom02" class="required">Last name</label>
-      <input type="text" class="form-control" id="validationCustom02" placeholder="Last name"  required>
+      <input type="text" name="last_name"  class="form-control" maxlength="50" id="validationCustom02" placeholder="Last name"  required>
       <div class="invalid-feedback">
         Please provide your last name.
       </div>
     </div>
     <div class="form-group col-md-2">
       <label for="inputState">Sex</label>
-      <select id="inputState" class="form-control">
+      <select id="inputState" name="gender" class="form-control">
         <option> </option> <!-- Updated -->
         <option>Male</option>
         <option>Female</option>
@@ -33,7 +35,7 @@ Sign Up
     <div class="col-md-3 mb-3">
       <label for="validationCustom04" class="required">Birth Date</label>
       <div class="input-group">
-          <input type="text" class="form-control vDateField" id="validationCustom04" placeholder="Birth Date"  size="10" required >
+          <input type="text" name="birth_date" class="form-control vDateField" id="validationCustom04" placeholder="Birth Date"  size="10" required >
           <div class="invalid-feedback">
             Please provide your birth date.
           </div>
@@ -47,7 +49,7 @@ Sign Up
       <div class="input-group">
         <div class="input-group-prepend">
         </div>
-        <input type="text" class="form-control" id="validationCustomUsername" placeholder="email" aria-describedby="inputGroupPrepend" required >
+        <input type="text" name="email" class="form-control" id="validationCustomUsername" placeholder="email" aria-describedby="inputGroupPrepend" required >
         <div class="invalid-feedback">
           Please provide your email.
         </div>
@@ -57,23 +59,24 @@ Sign Up
     
     <div class="col-md-3 mb-3">
       <label for="validationCustom05">Phone Number</label>
-      <input type="text" class="form-control" id="validationCustom05" placeholder="Phone Number" >
+      <input type="text" name="phone_number" class="form-control" id="validationCustom05" placeholder="Phone Number" >
     </div>
     <div class="col-md-3 mb-2">
       <label for="validationCustom03" class="required">Password</label>
-      <input type="password" class="form-control" id="validationCustom03" placeholder="Password" required>
+      <input type="password" name="password" class="form-control" id="validationCustom03" placeholder="Password" required>
       <div class="invalid-feedback">
         Please provide a password.
       </div>
     </div>
   </div>
- 
-    <button class="btn btn-primary" type="submit" style="margin-bottom: 10px;">Sign up</button>
-    <p> You already have an account ? <a href="{% url 'log_can' %}">Log in</a></p>
+ <div class="form-group" id="signup-button" >
+  <input class="btn btn-primary" type="submit" value="Sign up" style="margin-bottom: 10px; background-color: #007bff;">
+  </div>
+    
 
   
 </form>
-
+<p> You already have an account ? <a href="{% url 'log_can' %}">Log in</a></p>
 
 {% endblock content%}
 {% block scripts%}
