--- a/Agence/templates/Agence/add_candidate.html
+++ b/Agence/templates/Agence/add_candidate.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %} 
 {% load static %}
 {% block title%}
@@ -148,12 +147,11 @@ Add candidate
                 </div>
                 
 
-
             </div>  
         </form>
         
     </div>
-
+</div>
       
 </div>
 
