--- a/Agence/templates/Base_com.html
+++ b/Agence/templates/Base_com.html
@@ -43,7 +43,7 @@
 
 
 
-          {% include "sidebar_com.html" %}
+          {% include "sidebar_com.html" with id=id %}
         </aside>
       
         <!-- Content Wrapper. Contains page content -->
