--- a/Agence/templates/contact_com.html
+++ b/Agence/templates/contact_com.html
@@ -4,7 +4,7 @@
 Contact
 {% endblock title %}
 {% block content%}
-<p style="font-size: 15px;">To make any request, please contact us at: <a href="mailto:contact@dreamjob.ma">contact@dreamjob.ma</a></p>
+<p style="font-size: 15px;">To make any request, please contact us at: <a href="mailto:merecuit@gmail.com">contact@dreamjob.ma</a></p>
     <p> We will respond to you as soon as possible.</p>
 {% endblock content%}
 
