--- a/Agence/templates/job_can.html
+++ b/Agence/templates/job_can.html
@@ -6,15 +6,15 @@ Job
 {% block content%}
 
 <div id="card-deck">
-    {% for obj in my_objects_job %}
-        {% if obj.job_type == "job" %}
+    {% for objf in my_objects_job %}
+        {% if objf.job_type == "job" %}
             <div class="col-sm-6 col-6">
                 <div class="card">
-                    <div class="card-header">{{ obj.title }}</div>
+                    <div class="card-header">{{ objf.title }}</div>
                     <div class="card-body">
-                        <h6 class="card-title">{{ obj.workplace }}</h6>
-                        <p class="card-text" id="description">{{ obj.description }}</p>
-                        <a href="{% url 'more_infoc' obj.id %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>      
+                        <h6 class="card-title">{{ objf.workplace }}</h6>
+                        <p class="card-text" id="description">{{ objf.description }}</p>
+                        <a href="{% url 'more_infoc' obj.id_candidate objf.id %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>      
                     </div>
                 </div>
             </div>
