--- a/Agence/templates/login_can.html
+++ b/Agence/templates/login_can.html
@@ -30,7 +30,7 @@ Log In
   </div>
   
 
-  <a href="{% url 'home_can' %}"><button class="btn btn-primary" type="button" style="margin-bottom: 10px;">Log in</button></a>
+  <a href="{% url '#' %}"><button class="btn btn-primary" type="button" style="margin-bottom: 10px;">Log in</button></a>
   <p> Don't have an account ? <a href="{% url 'sign_can' %}">Register</a></p>
 </form>
 {% endblock content%}
