--- a/Agence/templates/sidebar_com.html
+++ b/Agence/templates/sidebar_com.html
@@ -38,7 +38,7 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a href="{% url 'internship' %}" class="nav-link">
+                      <a href="{% url 'my_offers' 7 %}" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
                         <p>My Offers</p>
                       </a>
