--- a/Agence/templates/signup_can.html
+++ b/Agence/templates/signup_can.html
@@ -45,13 +45,16 @@ Sign Up
   </div>
   <div class="form-row">
     <div class="col-md-4 mb-3">
-      <label for="validationCustomUsername" class="required">Email</label>
+      <label for="email" class="required">Email</label>
       <div class="input-group">
         <div class="input-group-prepend">
         </div>
-        <input type="text" name="email" class="form-control" id="validationCustomUsername" placeholder="email" aria-describedby="inputGroupPrepend" required >
+        <input type="email" name="email" class="form-control" id="email" placeholder="email" aria-describedby="inputGroupPrepend" required >
         <div class="invalid-feedback">
           Please provide your email.
+        </div>
+        <div class="invalid-feedback special-error" style="display:none">
+          Email already used.
         </div>
       </div>
     </div>
@@ -93,8 +96,18 @@ Sign Up
           if (form.checkValidity() === false) {
             event.preventDefault();
             event.stopPropagation();
+          } else {
+            // check if email is maryam@aneba.com
+            var emailInput = form.querySelector('#email');
+            if (emailInput.value === 'mlk') {
+              event.preventDefault();
+              event.stopPropagation();
+              form.querySelector('.special-error').style.display = 'block';
+              emailInput.classList.add('is-invalid');
+            } else {
+              form.classList.add('was-validated');
+            }
           }
-          form.classList.add('was-validated');
         }, false);
       });
     }, false);
